# asterism

./: .dockerignore  .env.example  .gitignore  .tagpr  CHANGELOG.md  CLAUDE.md  README.md  asterism.env.example  compose.demo.yaml  compose.mcp-front.yaml  compose.prod.yaml  compose.yaml  mcp.json
.github/workflows/: ci.yml  tagpr.yml
api/: pyproject.toml
api/src/asterism_api/: __init__.py  describe.py  design_loop.py  jobs.py  main.py  registry.py  server_keys.py  tool_loop.py  usage.py
api/src/csv2rdf_api/: main.py  registry.py
api/tests/: test_crosswalk_api.py  test_describe.py  test_design_loop.py  test_design_loop_mapping_ir.py  test_draft_stats.py  test_ingest.py  test_jobs.py  test_main.py  test_models_available.py  test_orphan_reclaim_api.py  test_query_tools_store.py  test_rules_and_history.py  test_server_keys.py  test_source_dialect.py  test_tool_loop.py  test_trial_queries.py  test_usage.py  test_xlsx_source.py
api/tests/fixtures/: sample.docx
datasets/materials_project/: README.md  dataset.toml  model.yaml  query_tools.yaml
datasets/papers/: README.md  dataset.toml  model.yaml  query_tools.yaml
datasets/starrydata/: dataset.toml  query_tools.yaml
demo-agent/: DEMO.md  Dockerfile  README.md  app.py  test_app.py
demo-agent/seed/: load.py
docs/: 404.html  ROADMAP.md  index.html
docs/architecture/: ai-assisted-step0-feedback.md  ai-assisted-step0-prompts.md  ai-assisted-step0-workflow.md  ask-quality-and-generality.md  crosswalk-compound-keys.md  crosswalk-hub.md  crosswalk-multi-perspective.md  crosswalk-normalizer-recipes.md  crucible-registration.md  design-rationale.md  document-ontology-layer.md  external-standard-alignment.md  incremental-ingest.md  ingestion-execution-safety.md  instance-iri-base.md  kantan-mode-two-tier-ux.md  linkml-vs-rdf-config.md  mapping-ir-compiler.md  mapping-ir-phase2-guided-repair.md  mapping-ir-phase2b-skeleton-wizard.md  native-json-denormalization.md  non-csv-sources.md  ontology-canonical-lifecycle.md  ontology-mapping-boundary-and-provenance.md  option-b.md  pdf-docling-conversion.md  phase05-decisions.md  phase2-digitization.md  phase2-qudt.md  phase2-template-curve-fetch.md  phase2-watcher.md  phase4-ui-architecture.md  phase5-declarative-substrate.md  phase5-workbench-materialize-gate.md  production-deployment.md  propose-self-correction-loop.md  scalable-declarative-ingestion.md  source-dialect.md  static-citable-facts-demo.md  step0-rml-emission.md  (+2 more)
docs/demo/: app.js  index.html  style.css
docs/design/: ui-guidelines.md
docs/ontology/: README.md  diagram.md
docs/reports/: README.md  document-ontology-mvp.md  legacy-instrument-dialect.md  mapping-ir-compiler-equivalence.md  mapping-ir-phase2b-staged-dogfood.md  pdf-conversion-feasibility.md  (+3 more)
ingest/: pyproject.toml
ingest/src/asterism/: crosswalk.py  crosswalk_discover.py  crosswalk_runtime.py  datasets.py  dialect.py  documents.py  exposure.py  functions.py  ontology_projection.py  oxigraph_client.py  primitives.py  qudt.py  query_tools.py  rml_safety.py  rml_summary.py  rml_validate.py  starrydata.py  substrate.py  substrate_udfs.py  tabularize.py  text.py  transforms.py  watcher.py
ingest/src/asterism/grounding/: __init__.py  catalog.py  known_vocabs.yaml  schema.py
ingest/src/asterism/tables/: bool.yaml  country_iso3166.yaml  unit_alias.yaml
ingest/src/csv2rdf/: functions.py  oxigraph_client.py  starrydata.py  substrate.py  substrate_udfs.py
ingest/tests/: test_crosswalk.py  test_crosswalk_discover.py  test_crosswalk_runtime.py  test_datasets.py  test_dialect.py  test_docling_adapter.py  test_documents.py  test_exposure.py  test_functions.py  test_grounding.py  test_grounding_schema.py  test_materials_project_dataset.py  test_ontology_projection.py  test_oxigraph_client.py  test_papers_dataset.py  test_primitives.py  test_prompt_registry_sync.py  test_qudt.py  test_query_tools.py  test_rml_safety.py  test_rml_summary.py  test_rml_validate.py  test_samples_curves.py  test_starrydata.py  test_substrate.py  test_tabularize.py  test_text.py  test_transforms.py  test_watcher.py
ingest/tests/fixtures/: docling_ma11040649.json
mcp/: pyproject.toml
mcp/src/asterism_mcp/: __init__.py  server.py  tools.py
mcp/src/csv2rdf_mcp/: __init__.py  server.py  tools.py
mcp/tests/: test_materials_project_server.py  test_query_tools_equivalence.py  test_server.py  test_tools.py  test_tools_integration.py
scripts/: build_demo_assets.py  demo_exposure_profile.py  init-secrets.sh  make_demo_subset.py  run_local_substrate_stack.sh  validate_memory_bounded_promote.py  verify_demo.py  verify_document_ontology_mvp.py
step0/: pyproject.toml
step0/dogfood/: starrydata-validate.md  starrydata.md
step0/src/asterism_step0/: __init__.py  coverage.py  crosswalk_propose.py  dialect.py  inspect.py  instance_iri.py  ir2mermaid.py  language.py  llm.py  mapping_ir.py  mapping_ir_schema.py  materialize.py  propose.py  refine.py  rml_check.py  rml_compile.py  skeleton_annotate.py  spec_repair.py  staged_propose.py  t1_ingester.py  tool_propose.py  ttl2mermaid.py  units.py  validate.py
step0/src/csv2rdf_step0/: materialize.py  propose.py  rml_check.py  t1_ingester.py  validate.py
step0/tests/: test_coverage.py  test_crosswalk_propose.py  test_dialect.py  test_inspect.py  test_inspect_tabularize_sync.py  test_instance_iri.py  test_ir2mermaid.py  test_language.py  test_llm.py  test_llm_continuation.py  test_llm_models.py  test_mapping_ir.py  test_mapping_ir_schema.py  test_materialize.py  test_materialize_mapping_ir.py  test_propose.py  test_refine.py  test_rml_check.py  test_rml_compile.py  test_rml_compile_morph.py  test_skeleton_annotate.py  test_staged_propose.py  test_t1_ingester.py  test_tool_propose.py  test_ttl2mermaid.py  test_units.py  test_validate.py  test_validate_fixture.py
step0/tests/fixtures/mapping_ir/: e2e.yaml  xml_reference.rml.ttl
step0/tests/fixtures/mermaid_invalid/: diagram.md
step0/tests/fixtures/starrydata_min/: ingester.py  mie.yaml  tbox.ttl
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  (+51 more)
(+272 files in other folders)
