[project]
name = "asterism-api"
version = "0.1.0"
description = "Upload API + watcher driver for asterism (Phase 2)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    # asterism-ingest and asterism-step0 are installed from sibling paths; see
    # [tool.uv.sources] below. step0's inspect path is dependency-free.
    "asterism-ingest",
    "asterism-step0",
    # Both LLM provider SDKs for the multi-provider client seam (asterism_step0.llm):
    # Anthropic (default Claude) + OpenAI (any OpenAI-compatible endpoint, e.g.
    # Sakura AI Engine via a custom base_url). Pinned here so the api venv always
    # has them; step0 lazy-imports them inside complete().
    "anthropic>=0.40",
    "openai>=1.40",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
asterism-api = "asterism_api.main:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asterism_api"]

[tool.uv.sources]
asterism-ingest = { path = "../ingest", editable = true }
asterism-step0 = { path = "../step0", editable = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency markers are calls-in-defaults by design (not B008 bugs).
extend-immutable-calls = ["fastapi.File", "fastapi.Query", "fastapi.Path", "fastapi.Depends"]

[tool.mypy]
strict = true
python_version = "3.11"
