[project]
name = "asterism-ingest"
version = "0.1.0"
description = "CSV -> RDF ingester for asterism (Phase 1)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "rdflib>=7.0",
    "httpx>=0.27",
    "watchfiles>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Declarative substrate (Phase 5 #15): run approved RML through Morph-KGC.
# Optional so the core ingester stays installable without the substrate stack.
substrate = [
    "morph-kgc>=2.6",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
asterism-starrydata-papers = "asterism.starrydata:_main"
asterism-starrydata-samples = "asterism.starrydata:_main_samples"
asterism-starrydata-curves = "asterism.starrydata:_main_curves"
asterism-watcher = "asterism.watcher:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asterism"]
# The QUDT map is no longer a package artifact: it is starrydata content, now the
# single source of truth at datasets/starrydata/qudt_map.yaml, read via the
# dataset loader at runtime (#20 P2-2b). The docker images bundle datasets/.

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"
