[project]
name = "asterism-ingest"
version = "0.1.0"
description = "CSV -> RDF ingester for asterism (Phase 1)"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "rdflib>=7.0",
    "httpx>=0.27",
    "watchfiles>=0.22",
    "pyyaml>=6.0",
    # Safe XML parsing for the document-ontology layer's structurer
    # (asterism.documents): uploaded JATS/document XML is untrusted, so we forbid
    # entity expansion ("billion laughs") and external entities (SSRF / local file
    # read via a DTD) while still allowing the harmless JATS DOCTYPE declaration —
    # stdlib xml.etree does not protect against the former.
    "defusedxml>=0.7",
    # query_tools lint gate: parse a declared SPARQL template with the SAME
    # parser the store runs (rdflib's SPARQL parser accepts undeclared prefixes,
    # so it cannot catch the class of bug this gate exists for). >=0.3 because
    # morph-kgc (the substrate extra) pins pyoxigraph<0.4 — the parse API and
    # error reporting we rely on exist in both lines.
    "pyoxigraph>=0.3",
    # Excel (.xlsx) → CSV conversion at the ingestion boundary (kantan-mode K6):
    # asterism.tabularize.xlsx_to_csvs reads the workbook directly (no pandas).
    "openpyxl>=3.1",
]

[project.optional-dependencies]
# Declarative substrate (Phase 5 #15): run approved RML through Morph-KGC.
# Optional so the core ingester stays installable without the substrate stack.
# google-re2 powers the fn:regex_extract primitive with a linear-time matcher
# (no catastrophic backtracking ⇒ ReDoS-immune on adversarial cell data); it is
# only needed when materializing RML that uses that primitive, hence substrate.
substrate = [
    "morph-kgc>=2.6",
    "google-re2>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
asterism-starrydata-papers = "asterism.starrydata:_main"
asterism-starrydata-samples = "asterism.starrydata:_main_samples"
asterism-starrydata-curves = "asterism.starrydata:_main_curves"
asterism-watcher = "asterism.watcher:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asterism"]
# The QUDT map is no longer a package artifact: it is starrydata content, now the
# single source of truth at datasets/starrydata/qudt_map.yaml, read via the
# dataset loader at runtime (#20 P2-2b). The docker images bundle datasets/.

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"
