[project]
name = "asterism-step0"
version = "0.1.0"
description = "AI-assisted Step 0 builder (CSV inspection + schema proposal) for asterism Phase 3"
requires-python = ">=3.11"
readme = "../README.md"
license = { text = "Apache-2.0" }
dependencies = [
    # No hard runtime deps; pandas is optional for users who want the
    # faster groupby path. We default to stdlib `csv` + `collections.Counter`
    # so the package stays installable without a heavy science stack.
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
]
anthropic = [
    # Required only for propose_schema with the default AnthropicLLMClient.
    # Tests use a mock LLM and don't need this — keep it optional so step0
    # stays installable in minimal CI.
    "anthropic>=0.40",
]
llm = [
    # Both provider SDKs for the multi-provider client seam (asterism_step0.llm):
    # Anthropic for the default Claude path, OpenAI for any OpenAI-compatible
    # endpoint (Sakura AI Engine / Groq / Ollama / vLLM, via a custom base_url).
    # Lazy-imported inside complete() so the package stays installable without
    # them; the api installs this extra so its venv has both SDKs.
    "anthropic>=0.40",
    "openai>=1.40",
]
validate = [
    # validate_schema parses TBox TTLs (rdflib) and MIE YAMLs (PyYAML).
    "rdflib>=7.0",
    "PyYAML>=6.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "rdflib>=7.0",
    "PyYAML>=6.0",
    # Guided-decoding JSON Schema tests (test_mapping_ir_schema / test_staged_propose)
    # validate the emitted schemas + staged-proposal contract. Without it those
    # importorskip-guarded modules silently SKIP in CI (incl. the ADR phase2b §10.1
    # "headline" equivalence test) — install it so they actually run.
    "jsonschema>=4.18",
]

[project.scripts]
asterism-coverage = "asterism_step0.coverage:_main"
asterism-inspect = "asterism_step0.inspect:_main"
asterism-materialize = "asterism_step0.materialize:_main"
asterism-propose = "asterism_step0.propose:_main"
asterism-refine = "asterism_step0.refine:_main"
asterism-ttl2mermaid = "asterism_step0.ttl2mermaid:_main"
asterism-validate = "asterism_step0.validate:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asterism_step0"]

[tool.ruff]
target-version = "py311"
line-length = 100
# Test fixtures are deliberately minimal sample bundles (e.g. a stub ingester
# the validator parses); they are data, not shipped code, so skip linting them.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
